SongPartImpl and ChordLeadSheetItems mutating methods now return PropertyChangeEvents to be fired by container. Cls and Sgs unit tests run OK.  App still not compilable.